--- a/templates/default/config/output_elasticsearch.conf.erb
+++ b/templates/default/config/output_elasticsearch.conf.erb
@@ -4,6 +4,7 @@ output {
     host => "<%= @elasticsearch_ip %>"
 <% end -%>
 <% if @elasticsearch_nodes -%>
+<%= @elasticsearch_nodes %>
 <% @elasticsearch_nodes.each do |host_port| -%>
     hosts => "<%= @elasticsearch_ip %>"
 <% end -%>
