add debug output - fixing output

--- a/templates/default/config/output_elasticsearch.conf.erb
+++ b/templates/default/config/output_elasticsearch.conf.erb
@@ -4,9 +4,9 @@ output {
     host => "<%= @elasticsearch_ip %>"
 <% end -%>
 <% if @elasticsearch_nodes -%>
-<%= @elasticsearch_nodes %>
+\\ <%= @elasticsearch_nodes %>
 <% @elasticsearch_nodes.each do |host_port| -%>
-    hosts => "<%= @elasticsearch_ip %>"
+    hosts => "<%= host_port %>"
 <% end -%>
 <% end -%>
 <% if @elasticsearch_cluster -%>
