--- a/templates/default/config/output_elasticsearch.conf.erb
+++ b/templates/default/config/output_elasticsearch.conf.erb
@@ -6,7 +6,8 @@ output {
 <% if @elasticsearch_nodes -%>
 \\ <%= @elasticsearch_nodes %>
 <% @elasticsearch_nodes.each do |host_port| -%>
-    hosts => "<%= host_port %>"
+\\    hosts => "<%= host_port %>"
+    hosts => <%= @elasticsearch_nodes %>
 <% end -%>
 <% end -%>
 <% if @elasticsearch_cluster -%>
